# maths-problem-gen

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  start_mathoid.sh
src/: derive.rs  eval.rs  fmt.rs  gen.rs  lib.rs  main.rs  render.rs  simplify.rs  solve.rs
src/server/: main.rs
