[package]
name = "maths_problem_gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.11", features=["blocking"] }
rocket = { version = "0.5.0-rc.2", features=["json"] }
tokio = "1.20.1"
uuid = { version = "1.1.2", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
image = "0.24.3"
